added some updates

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
    </head>
    <body>
       <header>
-         <h1>13 Favorite Art Tools</h1>
-         <p>Hi!  This is a list of some of my &quot;favorite&quot; art tools.  When illustrating, I find these supplies an essential part of my creative expressions.</p>
+         <h1 id="mainHeading">13 Favorite Art Tools</h1>
+         <p class="funParagraph" id="testP">Hi!  This is a list of some of my &quot;favorite&quot; art tools.  When illustrating, I find these supplies an essential part of my creative expressions.</p>
          <nav>
             <ul>
                <li><a href="#Zebra">Zebra Mechanicals</a></li>
@@ -68,7 +68,7 @@
             <section>
                <a name="Adobe"></a>
                <h2>Adobe Photoshop</h2>
-               <p>Oil Paints take some skill to use but result in detailed, professional, timeless artwork.  Oil paints can also be used for creating realistic backgrounds for other projects as well.</p>
+               <p>Photoshop is a good way to scan and finalize your art and sometimes even a shortcut for inking and coloring.  It gives several advanced options such as blur, blend, magic eraser and even AI generating.</p>
                <figure>
                   <img src="images/Photoshop.jpg" width="100" height="100"/>
                   <figcaption>The above picture shows Adobe Photoshop <a href="https://www.adobe.com/">Adobe</a></figcaption>
@@ -77,7 +77,7 @@
          </article>
       </main>
       <footer>
-         Thank you for your time.
+         ~Thank you for your time.
       </footer>
    </body>
 </html>
