--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
          </article>
       </main>
       <footer>
-         ~Thank you for your time.
+         &copy;~Thank you for your time.
       </footer>
    </body>
 </html>
